# tmux_kanban

./: LICENSE  PRD.md  README.md  README_RUST.md  build_rust.sh  install.sh  publish.sh  pyproject.toml
rust/: Cargo.toml  pyproject.toml
rust-tui/: Cargo.toml
rust-tui/src/: event.rs  fuzzy.rs  logger.rs  main.rs  model.rs  pty.rs  scanner.rs  session.rs  theme.rs  tree.rs  ui.rs
rust-tui/src/app/: actions.rs  async_ops.rs  mod.rs  navigation.rs  state.rs
rust-tui/src/ui/: layout.rs  mod.rs  modals.rs  panel_list.rs  preview.rs  status_bar.rs
rust/src/: detector.rs  lib.rs  tmux.rs
src/tmux_ai_kanban/: __init__.py  detector.py  detector_rust.py  main.py  models.py
src/tmux_ai_kanban/tui/: __init__.py  app.py  styles.tcss
src/tmux_ai_kanban/tui/widgets/: __init__.py  panel_list.py  preview.py  status_bar.py
src/tmux_ai_kanban/ui/: __init__.py
src/tmux_code_kanban/: __init__.py  detector.py  detector_rust.py  git_info.py  main.py  models.py  tmux_client.py
src/tmux_code_kanban/tui/: __init__.py  app.py  styles.tcss
src/tmux_code_kanban/tui/widgets/: panel_list.py  preview.py  search_box.py  settings_modal.py  status_bar.py  theme_selector.py
src/tmux_code_kanban/ui/: table.py
tasks/: prd-comprehensive-refactoring.md  prd-tui-kanban.md
