[project]
name = "tmux-ai-kanban"
version = "0.1.0"
description = "Tmux AI Panel Kanban - Manage claude, codex, kimi panels in tmux"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "textual>=0.41.0",
]

[project.scripts]
ai-kanban = "tmux_ai_kanban.main:app"
tak = "tmux_ai_kanban.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_ai_kanban"]
