[project]
name = "tmux-code-kanban"
version = "0.2.0"
description = "Tmux Code Panel Kanban - Manage claude, codex, kimi code panels in tmux"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "T1mn", email = "your.email@example.com"},
]
keywords = ["tmux", "code", "kanban", "claude", "codex", "kimi", "tui", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "textual>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/T1mn/tmux_kanban"
Documentation = "https://github.com/T1mn/tmux_kanban#readme"
Repository = "https://github.com/T1mn/tmux_kanban"
Issues = "https://github.com/T1mn/tmux_kanban/issues"

[project.scripts]
pad = "tmux_code_kanban.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmux_code_kanban"]
