[package]
name = "pad"
version = "0.3.0"
edition = "2021"
authors = ["T1mn <your.email@example.com>"]
description = "Tmux Code Kanban - Rust TUI Edition"
license = "MIT"
repository = "https://github.com/T1mn/tmux_kanban"

[dependencies]
crossterm = "0.27"
md5 = "0.7"
nix = { version = "0.27", features = ["term"] }
nucleo-matcher = "0.3"
portable-pty = "0.8"
rand = "0.8"
ratatui = "0.24"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
