[package]
name = "pad"
version = "0.3.0"
edition = "2021"
authors = ["T1mn <your.email@example.com>"]
description = "Tmux Code Kanban - Rust TUI Edition"
license = "MIT"
repository = "https://github.com/T1mn/tmux_kanban"

[dependencies]
crossterm = "0.27"
md5 = "0.7"
nix = { version = "0.27", features = ["term"] }
libc = "0.2"
nucleo-matcher = "0.3"
rand = "0.8"
ratatui = "0.24"
tokio = { version = "1.35", features = ["full"] }

# Unix-only PTY support
[target.'cfg(unix)'.dependencies]
pty = "0.2"

[profile.release]
opt-level = 3
lto = true
