[package]
name = "tmux-kanban-core"
version = "0.2.0"
edition = "2021"
authors = ["T1mn <your.email@example.com>"]
description = "High-performance core for tmux-code-kanban"
license = "MIT"
repository = "https://github.com/T1mn/tmux_kanban"

[lib]
name = "tmux_kanban_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
